<!--
  ~ Copyright (c) 2017 ConfidoWorks Studio (MIT License)
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Clicker</string>
    <string name="clicker">CLICK</string>
    <string name="store">STORE</string>

    <string name="creditsView1">Programming: HELLCAT-ZULU</string>
    <string name="creditsView2">QA: Wulfgaard117, Aviatriss</string>
    <string name="creditsView3">Thanks and inspiration: my family</string>
    <string name="credits">CREDITS</string>

    <string name="title_activity_main">Clicker</string>
    <string name="title_activity_store">Store</string>
    <string name="clickView">%1$d CLICKS</string>
    <string name="clickPSView">%1$d clicks per second</string>

    <string name="clickViewStore">%1$d Clicks Available</string>
    <string name="clickPSViewStore">%1$d CPS</string>
    <string name="storeHeader">STORE</string>

    <string name="store1Buy">BUY</string>
    <string name="store1Title">Click Finger</string>
    <string name="store1Cost">+1 to click, %1$d clicks</string>
    <string name="store1Bought">You have: %1$d</string>

    <string name="store2Buy">BUY</string>
    <string name="store2Title">Clicker</string>
    <string name="store2Cost">+1 CPS, %1$d clicks</string>
    <string name="store2Bought">You have: %1$d</string>

    <string name="store3Buy">BUY</string>
    <string name="store3Title">Poker</string>
    <string name="store3Cost">+2 CPS, %1$d clicks</string>
    <string name="store3Bought">You have: %1$d</string>

    <string name="dialogConfirm">Whee!!!</string>
    <string name="dialogMessage">You have gained %1$d clicks since you last showed up. Huzzah!</string>
</resources>
