<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 ConfidoWorks Studio (MIT License)
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.studio.confidoworks.clicker.store">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/storeHeader"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/clickView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"
        android:layout_margin="5dp"
        android:text="@string/clickViewStore"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <TextView
        android:id="@+id/clickPSView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/header"
        android:layout_margin="5dp"
        android:text="@string/clickPSViewStore"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <Space
        android:id="@+id/space1"
        style="android:attr/listDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/clickView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/store1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/store1Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/store1Title"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/store1Cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/store1Cost"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/store1Bought"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/store1Bought"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/store1Buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="store1Buy"
                    android:text="@string/store1Buy" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/store1Progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/store1"
                android:max="50"
                android:progress="0" />

            <Space
                android:id="@+id/space2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/store1Progress"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:id="@+id/store2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/space2"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/store2Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/store2Title"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/store2Cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/store2Cost"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/store2Bought"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/store2Bought"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/store2Buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="store2Buy"
                    android:text="@string/store2Buy" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/store2Progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/store2"
                android:max="1000"
                android:progress="0" />

            <Space
                android:id="@+id/space3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/store2Progress"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:id="@+id/store3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/space3"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/store3Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/store3Title"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/store3Cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/store3Cost"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/store3Bought"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/store3Bought"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/store3Buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="store3Buy"
                    android:text="@string/store3Buy" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/store3Progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/store3"
                android:max="1000"
                android:progress="0" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
